minor fix z-index

--- a/main.css
+++ b/main.css
@@ -53,6 +53,7 @@ blockquote {
 	position: fixed;
 	width: 100%;
 	top: 0;
+	z-index: 999;
 }
 
 
